--- a/workflow/notebooks/generate_config_dict.ipynb
+++ b/workflow/notebooks/generate_config_dict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "3d2834bd-b0a2-4b1f-b3ca-2e007203e03a",
    "metadata": {},
    "outputs": [],
@@ -33,10 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "61c67746-c2ec-44ea-a403-8f3239df5786",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/miaochangjiu/kNN-overlap-finder/scripts/../lib\n"
+     ]
+    }
+   ],
    "source": [
     "from data_io import is_fwd_id, get_fwd_id, get_sibling_id\n",
     "from dim_reduction import SpectralEmbedding, scBiMapEmbedding\n",
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "18ca0076-48a5-4807-91c1-d73ab7269f7e",
    "metadata": {},
    "outputs": [],
@@ -1128,22 +1136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "e1fc4b9e-2b2d-4031-9622-92729b1268d4",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "NearestNeighborsConfig.__init__() missing 1 required positional argument: 'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[54], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m config_dict \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m      5\u001b[0m kw \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdata\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;241m1\u001b[39m}\n\u001b[0;32m----> 6\u001b[0m config_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExact_Euclidean_Spectural_100d_TF\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39mNearestNeighborsConfig(\n\u001b[1;32m      7\u001b[0m             nearest_neighbors_method\u001b[38;5;241m=\u001b[39mExactNearestNeighbors,\n\u001b[1;32m      8\u001b[0m             description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExactNearestNeighbors,Euclidean,SpectralEmbedding,100,TF\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      9\u001b[0m             tfidf\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTF\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     10\u001b[0m             dimension_reduction_method\u001b[38;5;241m=\u001b[39mSpectralEmbedding,\n\u001b[1;32m     11\u001b[0m             dimension_reduction_kw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(n_dimensions\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m),\n\u001b[1;32m     12\u001b[0m             nearest_neighbors_kw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meuclidean\u001b[39m\u001b[38;5;124m'\u001b[39m)) \n\u001b[1;32m     13\u001b[0m config_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExact_Euclidean_Spectural_100d_IDF\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39mNearestNeighborsConfig(\n\u001b[1;32m     14\u001b[0m             nearest_neighbors_method\u001b[38;5;241m=\u001b[39mExactNearestNeighbors,\n\u001b[1;32m     15\u001b[0m             description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExactNearestNeighbors,Euclidean,SpectralEmbedding,100,IDF\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     18\u001b[0m             dimension_reduction_kw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(n_dimensions\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m),\n\u001b[1;32m     19\u001b[0m             nearest_neighbors_kw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meuclidean\u001b[39m\u001b[38;5;124m'\u001b[39m)) \n\u001b[1;32m     20\u001b[0m config_dict[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExact_Euclidean_Spectural_100d_TF-IDF\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m=\u001b[39mNearestNeighborsConfig(\n\u001b[1;32m     21\u001b[0m             nearest_neighbors_method\u001b[38;5;241m=\u001b[39mExactNearestNeighbors,\n\u001b[1;32m     22\u001b[0m             description\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mExactNearestNeighbors,Euclidean,SpectralEmbedding,100,TF-IDF\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     25\u001b[0m             dimension_reduction_kw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(n_dimensions\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m),\n\u001b[1;32m     26\u001b[0m             nearest_neighbors_kw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(metric\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meuclidean\u001b[39m\u001b[38;5;124m'\u001b[39m)) \n",
-      "\u001b[0;31mTypeError\u001b[0m: NearestNeighborsConfig.__init__() missing 1 required positional argument: 'data'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "MAX_SAMPLE_SIZE = int(1e9)\n",
     "COVERAGE_DEPTH = 20\n",
@@ -2106,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "14af36e7-5694-43ad-93d2-9ec99eacacd0",
    "metadata": {},
    "outputs": [],
@@ -2152,6 +2148,46 @@
     "            mytest1.append(method)\n",
     "print(mytest1)\n",
     "len(mytest1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "61585692-537c-45a5-ac84-e96bcc8f6c46",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Exact_Euclidean_scBiMap_500d_TF', 'Exact_Euclidean_scBiMap_500d_IDF', 'Exact_Euclidean_scBiMap_500d_TF-IDF', 'Exact_Euclidean_scBiMap_500d_None', 'Exact_Euclidean_None_TF', 'Exact_Euclidean_None_IDF', 'Exact_Euclidean_None_TF-IDF', 'Exact_Euclidean_None_None', 'Exact_Cosine_scBiMap_500d_TF', 'Exact_Cosine_scBiMap_500d_IDF', 'Exact_Cosine_scBiMap_500d_TF-IDF', 'Exact_Cosine_scBiMap_500d_None', 'Exact_Cosine_None_TF', 'Exact_Cosine_None_IDF', 'Exact_Cosine_None_TF-IDF', 'Exact_Cosine_None_None', 'LowHash_Jaccard_None_TF', 'LowHash_Jaccard_None_IDF', 'LowHash_Jaccard_None_TF-IDF', 'LowHash_Jaccard_None_None', 'WeightedLowHash_Jaccard_None_TF', 'WeightedLowHash_Jaccard_None_IDF', 'WeightedLowHash_Jaccard_None_TF-IDF', 'WeightedLowHash_Jaccard_None_None', 'MinHash_Jaccard_None_TF', 'MinHash_Jaccard_None_IDF', 'MinHash_Jaccard_None_TF-IDF', 'MinHash_Jaccard_None_None', 'WeightedMinHash_Jaccard_None_TF', 'WeightedMinHash_Jaccard_None_IDF', 'WeightedMinHash_Jaccard_None_TF-IDF', 'WeightedMinHash_Jaccard_None_None']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mytest2 = []\n",
+    "for method in simple_names:\n",
+    "    if '100' not in method and 'scBiMap' in method:\n",
+    "        if 'Exact' in method:\n",
+    "            mytest2.append(method)\n",
+    "    elif 'Min' in method or 'Low' in method:\n",
+    "        mytest2.append(method)\n",
+    "    elif 'Exact' in method and 'None_' in method:\n",
+    "        mytest2.append(method)\n",
+    "print(mytest2)\n",
+    "len(mytest2)"
    ]
   },
   {
