--- a/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
+++ b/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
@@ -267,10 +267,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7fdaf979-7946-4305-9642-a18d02a7af71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'configs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m df_rows \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, config \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(configs):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m k_values:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'configs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_rows = []\n",
     "for i, config in enumerate(configs):\n",
@@ -285,6 +297,7 @@
     "                 **graph_stats, **time_stats, **memory_stats}\n",
     "        df_rows.append(stats)\n",
     "df = pd.DataFrame(df_rows)\n",
+    "df['connected_fraction'] = 1 - df['singleton_fraction']\n",
     "df.to_csv(stat_path,  sep='\\t')"
    ]
   }
