add BLEND and real data part

--- a/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
+++ b/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
@@ -114,11 +114,16 @@
     "region = snakemake.wildcards['region']\n",
     "method = snakemake.wildcards['method']\n",
     "\n",
+    "if method ==\"Minimap2\":\n",
+    "    paf_path = snakemake.input['paf_minimap2']\n",
+    "elif method == \"Blend\":\n",
+    "    paf_path = snakemake.input['paf_blend']\n",
+    "else:\n",
+    "    paf_path = ''\n",
     "\n",
     "npz_path = snakemake.input['feature_matrix']\n",
     "tsv_path = snakemake.input['metadata']\n",
     "json_path = snakemake.input['read_features']\n",
-    "paf_path = snakemake.input['paf']\n",
     "\n",
     "nbr_path = snakemake.output['nbr_indice']\n",
     "stat_path = snakemake.output['overlap']\n",
@@ -136,7 +141,6 @@
    "source": [
     "meta_df = pd.read_table(tsv_path).iloc[:MAX_SAMPLE_SIZE, :].reset_index()\n",
     "read_indices = {read_name: read_id for read_id, read_name in meta_df['read_name'].items()}\n",
-    "\n",
     "feature_matrix = sp.sparse.load_npz(npz_path)[meta_df.index, :]\n",
     "\n",
     "with gzip.open(json_path, \"rt\") as f:\n",
@@ -181,7 +185,18 @@
     "max_n_neighbors = COVERAGE_DEPTH\n",
     "\n",
     "with open('workflow/notebooks/config_dict.pkl', 'rb') as file:  \n",
-    "    config_dict = pickle.load(file)  "
+    "    config_dict = pickle.load(file)\n",
+    "\n",
+    "config_dict[\"Minimap2\"]=NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=PAFNearestNeighbors,\n",
+    "        description=\"Minimap2 all-vs-all\",\n",
+    "        nearest_neighbors_kw=dict(paf_path=paf_path, read_indices=read_indices)\n",
+    "        )\n",
+    "config_dict[\"Blend\"]=NearestNeighborsConfig(\n",
+    "        nearest_neighbors_method=PAFNearestNeighbors,\n",
+    "        description=\"Blend\",\n",
+    "        nearest_neighbors_kw=dict(paf_path=paf_path, read_indices=read_indices)\n",
+    "        )  "
    ]
   },
   {
