split get neighbors, evaluation and visulization modules

--- a/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
+++ b/workflow/notebooks/get_neighbors_indice.smk.py.ipynb
@@ -21,6 +21,7 @@
     "import seaborn\n",
     "import sharedmem\n",
     "\n",
+    "\n",
     "plt.rcParams[\"figure.facecolor\"] = \"white\"\n",
     "plt.rcParams[\"figure.dpi\"] = 300\n",
     "\n",
@@ -126,7 +127,7 @@
     "json_path = snakemake.input['read_features']\n",
     "\n",
     "nbr_path = snakemake.output['nbr_indice']\n",
-    "stat_path = snakemake.output['overlap']\n",
+    "time_path = snakemake.output['time_use']\n",
     "threads  = snakemake.threads\n",
     "\n",
     "print(sample, dataset, region)"
@@ -218,102 +219,9 @@
     "    processes=processes,\n",
     ")\n",
     "\n",
-    "np.savez(nbr_path, nbr_dict)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b936017-e53e-40a0-ac6a-3c7fe05ad6b5",
-   "metadata": {},
-   "source": [
-    "## Statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5c0e043-b437-4432-b704-a0b32664e070",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "read_ids = np.array(list(read_features))\n",
-    "graphs = collections.defaultdict(dict)\n",
-    "k_values = np.arange(2, max_n_neighbors + 1)\n",
-    "for i, config in enumerate(configs):\n",
-    "    print(i, end=\" \")\n",
-    "    nbr_indices = nbr_dict[i]\n",
-    "    for k in k_values:\n",
-    "        graph = OverlapGraph.from_neighbor_indices(\n",
-    "            neighbor_indices=nbr_indices,\n",
-    "            n_neighbors=k,\n",
-    "            read_ids=read_ids,\n",
-    "            require_mutual_neighbors=False,\n",
-    "        )\n",
-    "        graphs[i][k] = graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b938625f-7a82-40cb-a49e-912a88c59c23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_read_intervals(meta_df):\n",
-    "    read_intervals = {\n",
-    "        i: [GenomicInterval(strand, start, end)]\n",
-    "        for i, strand, start, end in zip(\n",
-    "            meta_df.index,\n",
-    "            meta_df[\"reference_strand\"],\n",
-    "            meta_df[\"reference_start\"],\n",
-    "            meta_df[\"reference_end\"],\n",
-    "        )\n",
-    "    }\n",
-    "    return read_intervals\n",
-    "\n",
-    "read_intervals = get_read_intervals(meta_df)\n",
-    "len(read_intervals)\n",
-    "\n",
-    "reference_graph = OverlapGraph.from_intervals(read_intervals)\n",
-    "nr_edges = set((node_1, node_2) for node_1, node_2, data in reference_graph.edges(data=True) if not data['redundant'])\n",
-    "connected_component_count = len(list(nx.connected_components(reference_graph)))\n",
-    "len(reference_graph.nodes), len(reference_graph.edges), len(nr_edges), connected_component_count\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "7fdaf979-7946-4305-9642-a18d02a7af71",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'configs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m df_rows \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, config \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(configs):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m k_values:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'configs' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "df_rows = []\n",
-    "for i, config in enumerate(configs):\n",
-    "    print(i, end=' ')\n",
-    "    for k in k_values:\n",
-    "        graph = graphs[i][k]\n",
-    "        graph_stats = get_overlap_statistics(query_graph=graph, reference_graph=reference_graph)\n",
-    "        time_stats = {\"elapsed_time:\" + k: v for k, v in time_dict[i].items()}\n",
-    "        memory_stats = {\"peak_memory:\" + k: v for k, v in memory_dict[i].items()}\n",
-    "        \n",
-    "        stats = {\"config_id\": i, \"description\": config.description, \"n_neighbors\": k, \n",
-    "                 **graph_stats, **time_stats, **memory_stats}\n",
-    "        df_rows.append(stats)\n",
-    "df = pd.DataFrame(df_rows)\n",
-    "df['connected_fraction'] = 1 - df['singleton_fraction']\n",
-    "df.to_csv(stat_path,  sep='\\t')"
+    "np.savez(nbr_path, nbr_dict[0])\n",
+    "with open(time_path, 'wb') as file:  \n",
+    "    pickle.dump(time_dict[0], file) \n"
    ]
   }
  ],
