--- a/workflow/scripts/test.ipynb
+++ b/workflow/scripts/test.ipynb
@@ -39,6 +39,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The memory_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext memory_profiler\n",
+      "peak memory: 72.57 MiB, increment: 0.34 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "from memory_profiler import profile\n",
+    "%load_ext memory_profiler\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 72.88 MiB, increment: 0.00 MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "%memit x = 10+5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
