add Simhash, not done yet

--- a/workflow/notebooks/evaluate_configs.smk copy.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk copy.ipynb
@@ -19,8 +19,6 @@
     "import scipy as sp\n",
     "import seaborn\n",
     "import sharedmem\n",
-    "import pygraphviz\n",
-    "\n",
     "\n",
     "plt.rcParams[\"figure.facecolor\"] = \"white\"\n",
     "plt.rcParams[\"figure.dpi\"] = 300\n",
@@ -39,8 +37,7 @@
     "from data_io import is_fwd_id, get_fwd_id, get_sibling_id\n",
     "from graph import OverlapGraph, GenomicInterval, get_overlap_statistics, remove_false_edges\n",
     "from truth import get_overlaps\n",
-    "from evaluate import NearestNeighborsConfig, mp_compute_nearest_neighbors\n",
-    "from plots import plot_read_graph, mp_plot_read_graphs, get_graphviz_layout, get_umap_layout"
+    "from evaluate import NearestNeighborsConfig, mp_compute_nearest_neighbors"
    ]
   },
   {
@@ -50,8 +47,7 @@
    "outputs": [],
    "source": [
     "MAX_SAMPLE_SIZE = int(1e9)\n",
-    "COVERAGE_DEPTH = 20\n",
-    "max_n_neighbors = 20"
+    "COVERAGE_DEPTH = 20"
    ]
   },
   {
@@ -72,7 +68,6 @@
     "time_path = snakemake.input['time_use']\n",
     "\n",
     "stat_path = snakemake.output['overlap']\n",
-    "fig_path =snakemake.output['fig']\n",
     "\n",
     "threads  = snakemake.threads\n",
     "\n",
@@ -117,7 +112,6 @@
     "read_ids = np.array(list(read_features))\n",
     "graphs = collections.defaultdict(dict)\n",
     "k_values = np.arange(2, max_n_neighbors + 1)\n",
-    "\n",
     "for k in k_values:\n",
     "    graph = OverlapGraph.from_neighbor_indices(\n",
     "        neighbor_indices=nbr_indices,\n",
@@ -125,7 +119,7 @@
     "        read_ids=read_ids,\n",
     "        require_mutual_neighbors=False,\n",
     "    )\n",
-    "    graphs[k] = graph"
+    "    graphs[i][k] = graph"
    ]
   },
   {
@@ -160,97 +154,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tsv_path = \"/home/miaocj/docker_dir/kNN-overlap-finder/data/feature_matrix/Ecoli/all/tmp/kmer_k16/metadata.tsv.gz\"\n",
+    "def get_read_intervals(meta_df):\n",
+    "    read_intervals = {\n",
+    "        i: [GenomicInterval(chromosome, strand, start, end)]\n",
+    "        for i, chromosome, strand, start, end in zip(\n",
+    "            meta_df.index,\n",
+    "            meta_df[\"chromosome\"]\n",
+    "            meta_df[\"reference_strand\"],\n",
+    "            meta_df[\"reference_start\"],\n",
+    "            meta_df[\"reference_end\"],\n",
+    "        )\n",
+    "    }\n",
+    "    return read_intervals\n",
+    "\n",
+    "read_intervals = get_read_intervals(meta_df)\n",
+    "\n",
+    "reference_graph = OverlapGraph.from_intervals(read_intervals)\n",
+    "nr_edges = set((node_1, node_2) for node_1, node_2, data in reference_graph.edges(data=True) if not data['redundant'])\n",
+    "connected_component_count = len(list(nx.connected_components(reference_graph)))\n",
+    "len(reference_graph.nodes), len(reference_graph.edges), len(nr_edges), connected_component_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_rows = []\n",
     "\n",
     "for k in k_values:\n",
     "    graph = graphs[k]\n",
     "    graph_stats = get_overlap_statistics(query_graph=graph, reference_graph=reference_graph)\n",
     "    time_stats = {\"elapsed_time:\" + k: v for k, v in time_dict.items()}  \n",
-    "    stats = {\"description\": method, \"n_neighbors\": k, \n",
+    "    stats = {\"description\": config.description, \"n_neighbors\": k, \n",
     "                **graph_stats, **time_stats}\n",
     "    df_rows.append(stats)\n",
     "df = pd.DataFrame(df_rows)\n",
     "df['connected_fraction'] = 1 - df['singleton_fraction']\n",
     "df.to_csv(stat_path,sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def remove_small_components(graph, min_component_size=10):\n",
-    "    small_components = set()\n",
-    "    for component in nx.connected_components(graph):\n",
-    "        if len(component) < min_component_size:\n",
-    "            small_components |= component\n",
-    "    graph.remove_nodes_from(small_components)\n",
-    "            \n",
-    "    \n",
-    "def plot_graphs(graphs, reference_graph, metadata, *, min_component_size=10, \n",
-    "                processes=8, layout_method='stdp', figsize=(6, 6), node_size=3,\n",
-    "    seed: int = 4829, verbose=True):\n",
-    "    axes = []\n",
-    "    new_graphs = []\n",
-    "    g = graphs\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6), constrained_layout=True)\n",
-    "    ax1.set_title(\"All edges\")\n",
-    "    ax2.set_title(\"Correct edges\")\n",
-    "    \n",
-    "    g = g.copy()\n",
-    "    remove_small_components(g, min_component_size=min_component_size)\n",
-    "    new_graphs.append(g)\n",
-    "    axes.append(ax1)\n",
-    "\n",
-    "    g = g.copy()\n",
-    "    remove_false_edges(g, reference_graph)\n",
-    "    remove_small_components(g, min_component_size=min_component_size)\n",
-    "    new_graphs.append(g)\n",
-    "    axes.append(ax2)\n",
-    "\n",
-    "    fig.suptitle(fig_path, ha=\"center\", va=\"bottom\", wrap=True, size=7)\n",
-    "\n",
-    "    query_graphs = new_graphs\n",
-    "    def plot(i, pos):\n",
-    "        plot_read_graph(\n",
-    "            ax=axes[i],\n",
-    "            query_graph=query_graphs[i],\n",
-    "            reference_graph=reference_graph,\n",
-    "            metadata=metadata,\n",
-    "            pos=pos,\n",
-    "            node_size=node_size,\n",
-    "        )\n",
-    "    pos = get_graphviz_layout(\n",
-    "            graph=query_graphs[0],\n",
-    "            figsize=figsize,\n",
-    "            seed=seed,\n",
-    "            layout_method=layout_method,\n",
-    "        )\n",
-    "    plot(0, pos)\n",
-    "    pos = get_graphviz_layout(\n",
-    "            graph=query_graphs[1],\n",
-    "            figsize=figsize,\n",
-    "            seed=seed,\n",
-    "            layout_method=layout_method,\n",
-    "        )\n",
-    "    plot(1, pos)\n",
-    "    \n",
-    "    return fig"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "k6_graphs = graphs[6]\n",
-    "figures = plot_graphs(\n",
-    "    k6_graphs, reference_graph=reference_graph, metadata=meta_df, layout_method=\"sfdp\", processes=threads\n",
-    ")\n",
-    "figures.savefig(fig_path,dpi=300,bbox_inches='tight')"
    ]
   }
  ],
