--- a/workflow/notebooks/local_run_evalutate.ipynb
+++ b/workflow/notebooks/local_run_evalutate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a66ac6bd-b29b-48b6-9cf8-e5dd33f2e767",
    "metadata": {},
    "outputs": [],
@@ -41,18 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "04e44b36-4f11-4ed5-81b3-d1612186a830",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/miaocj/docker_dir/kNN-overlap-finder/scripts/../lib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from data_io import is_fwd_id, get_fwd_id, get_sibling_id\n",
     "from dim_reduction import SpectralEmbedding, scBiMapEmbedding\n",
@@ -83,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f51d1d2b-7df2-4747-baa0-e2f8adaf8d56",
    "metadata": {},
    "outputs": [],
@@ -103,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "7ae58181-508b-4162-a3a0-33b45ae40fd0",
    "metadata": {},
    "outputs": [],
@@ -121,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "5654c73f-bfbe-4907-ac8d-b2c94e016ca7",
    "metadata": {},
    "outputs": [],
@@ -139,6 +131,26 @@
     "\n",
     "kw = dict(data=feature_matrix)\n",
     "max_bucket_size = COVERAGE_DEPTH * 1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5cd8a935",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "882\n",
+      "869\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(read_features[0]))\n",
+    "print(len(set(read_features[0])))"
    ]
   },
   {
