--- a/workflow/scripts/test.ipynb
+++ b/workflow/scripts/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +102,111 @@
     "                flag += 1\n",
     "    print(flag/seq_num)\n",
     "    print(aligned_num/seq_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##输入需要有kmer_indice 这个字典，键是index，值是kmer的内容\n",
+    "class SimHash():\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _hash(kmer: str, seed: int) -> int:\n",
+    "        hash_value = mmh3.hash(kmer, seed=seed)\n",
+    "        binary_string = format(hash_value & 0xFFFFFFFF, '032b')\n",
+    "        return binary_string\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def _get_read_hash_list(\n",
+    "        read_features: list,\n",
+    "        kmer_indice: Mapping(int, str), \n",
+    "        repeats: int, \n",
+    "        seed: int) -> Mapping(int,list):\n",
+    "        rng = np.random.default_rng(seed)\n",
+    "        hash_seeds = rng.integers(low=0, high=2**32 - 1, size=repeats, dtype=np.uint64,replace=False)\n",
+    "        repeat_all_read_hash = {}\n",
+    "        for k in range(repeats):\n",
+    "            s = hash_seeds[k]\n",
+    "            kmer_hash_indice={}\n",
+    "            all_read_hash = []\n",
+    "            for indice,kmer in kmer_indice:\n",
+    "                hash_value = SimHash._hash(kmer, seed=s)\n",
+    "                kmer_hash_indice[indice] = hash_value\n",
+    "            for features in read_features:\n",
+    "                read_hash = {}\n",
+    "                feature_count = dict(collections.Counter(features))\n",
+    "                for indice,count in feature_count.items():\n",
+    "                    hash_value = kmer_hash_indice[indice]\n",
+    "                    read_hash[hash_value] = count\n",
+    "                all_read_hash.append[read_hash]\n",
+    "        repeat_all_read_hash[k] = all_read_hash              \n",
+    "        return repeat_all_read_hash\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def get_simhash_value(hash_dict:dict):\n",
+    "\n",
+    "        read_hash = []\n",
+    "        for hash_vaule,count in hash_dict:\n",
+    "            hash_list = list(hash_value)\n",
+    "            new_hash = [-1 if x == 0 else x for x in hash_list]\n",
+    "            weight_hash = count*new_hash\n",
+    "            read_hash.append(weight_hash)\n",
+    "        hash_arrary = np.arrary(read_hash)\n",
+    "        \n",
+    "                \n",
+    "            \n",
+    "\n",
+    "\n",
+    "            \n",
+    "        \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'blue': 3, 'red': 2, 'green': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "colors = ['red', 'blue', 'red', 'green', 'blue', 'blue']\n",
+    "c = Counter(colors)\n",
+    "print (c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'00100101101010010101110010111001'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import mmh3\n",
+    "hash_value = mmh3.hash('AAAATTTTGCATAACGGT',seed=10)\n",
+    "binary_string = format(hash_value & 0xFFFFFFFF, '032b')\n",
+    "binary_string"
    ]
   },
   {
