--- a/workflow/notebooks/evaluate_configs_visulization.smk.ipynb
+++ b/workflow/notebooks/evaluate_configs_visulization.smk.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,28 +222,118 @@
     "            node_size=node_size,\n",
     "        )\n",
     "    pos = get_graphviz_layout(\n",
-    "            graph=query_graphs[0],\n",
-    "            figsize=figsize,\n",
-    "            seed=seed,\n",
-    "            layout_method=layout_method,\n",
-    "        )\n",
-    "    plot(0, pos)\n",
-    "    pos = get_graphviz_layout(\n",
     "            graph=query_graphs[1],\n",
     "            figsize=figsize,\n",
     "            seed=seed,\n",
     "            layout_method=layout_method,\n",
     "        )\n",
     "    plot(1, pos)\n",
+    "    pos = get_graphviz_layout(\n",
+    "            graph=query_graphs[2],\n",
+    "            figsize=figsize,\n",
+    "            seed=seed,\n",
+    "            layout_method=layout_method,\n",
+    "        )\n",
+    "    plot(2, pos)\n",
     "    \n",
     "    return fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def remove_small_components(graph, min_component_size=10):\n",
+    "    small_components = set()\n",
+    "    for component in nx.connected_components(graph):\n",
+    "        if len(component) < min_component_size:\n",
+    "            small_components |= component\n",
+    "    graph.remove_nodes_from(small_components)\n",
+    "            \n",
+    "    \n",
+    "def plot_graphs(graphs, reference_graph, metadata, *, min_component_size=10, \n",
+    "                processes=8, layout_method='stdp', figsize=(6, 6), node_size=3,\n",
+    "    seed: int = 4829, verbose=True):\n",
+    "    axes = []\n",
+    "    figures = []\n",
+    "\n",
+    "    new_graphs = []\n",
+    "    for g in graphs:\n",
+    "        fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6), constrained_layout=True)\n",
+    "        figures.append(fig)\n",
+    "        ax1.set_title(\"All edges\")\n",
+    "        ax2.set_title(\"Correct edges\")\n",
+    "        \n",
+    "        g = g.copy()\n",
+    "        remove_small_components(g, min_component_size=min_component_size)\n",
+    "        new_graphs.append(g)\n",
+    "        axes.append(ax1)\n",
+    "\n",
+    "        g = g.copy()\n",
+    "        remove_false_edges(g, reference_graph)\n",
+    "        remove_small_components(g, min_component_size=min_component_size)\n",
+    "        new_graphs.append(g)\n",
+    "        axes.append(ax2)\n",
+    "\n",
+    "    for fig, config in zip(figures, configs):\n",
+    "        fig.suptitle(str(config), ha=\"center\", va=\"bottom\", wrap=True, size=7)\n",
+    "\n",
+    "    query_graphs = new_graphs\n",
+    "    def plot(i, pos):\n",
+    "        plot_read_graph(\n",
+    "            ax=axes[i],\n",
+    "            query_graph=query_graphs[i],\n",
+    "            reference_graph=reference_graph,\n",
+    "            metadata=metadata,\n",
+    "            pos=pos,\n",
+    "            node_size=node_size,\n",
+    "        )\n",
+    "\n",
+    "    with sharedmem.MapReduce(np=processes) as pool:\n",
+    "\n",
+    "        def work(i):\n",
+    "            if layout_method == \"umap\":\n",
+    "                pos = get_umap_layout(graph=query_graphs[i])\n",
+    "            else:\n",
+    "                pos = get_graphviz_layout(\n",
+    "                    graph=query_graphs[i],\n",
+    "                    figsize=figsize,\n",
+    "                    seed=seed,\n",
+    "                    layout_method=layout_method,\n",
+    "                )\n",
+    "            return i, pos\n",
+    "\n",
+    "        def reduce(i, pos):\n",
+    "            if verbose:\n",
+    "                print(i, end=\" \")\n",
+    "            plot(i, pos)\n",
+    "\n",
+    "        pool.map(work, range(len(query_graphs)), reduce=reduce)\n",
+    "        if verbose:\n",
+    "            print(\"\")\n",
+    "\n",
+    "    return figures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'graphs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:1\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'graphs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "k6_graphs = graphs[6]\n",
@@ -255,8 +345,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "deep_rl:container1.0",
+   "language": "python",
+   "name": "deep_rl"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
