complete simhash algorithm

--- a/workflow/notebooks/evaluate_configs.smk.py.ipynb
+++ b/workflow/notebooks/evaluate_configs.smk.py.ipynb
@@ -170,8 +170,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "deep_rl:container1.0",
+   "language": "python",
+   "name": "deep_rl"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
